# ChangeLog for media-video/ffmpeg
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.318 2009/09/28 22:49:59 aballier Exp $

  28 Sep 2009; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999-r1.ebuild,
  metadata.xml:
  Add a pic useflag

  25 Sep 2009; Mounir Lamouri <volkmar@gentoo.org> ffmpeg-0.5_p19928.ebuild:
  Keywording for ppc. Bug 283953

  24 Sep 2009; Raúl Porcel <armin76@gentoo.org> ffmpeg-0.5_p19787.ebuild,
  ffmpeg-0.5_p19928.ebuild:
  Re-add ~ia64 wrt #283953

  23 Sep 2009; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999-r1.ebuild:
  bump x264 requirements

  20 Sep 2009; Markus Meier <maekke@gentoo.org> ffmpeg-0.5_p19928.ebuild:
  add ~arm

  20 Sep 2009; Markus Meier <maekke@gentoo.org> ffmpeg-0.5_p19787.ebuild:
  add ~arm, bug #283953

*ffmpeg-0.5_p19928 (20 Sep 2009)

  20 Sep 2009; Alexis Ballier <aballier@gentoo.org>
  +ffmpeg-0.5_p19928.ebuild:
  bump a new snapshot

  15 Sep 2009; Alexis Ballier <aballier@gentoo.org> ffmpeg-0.5-r1.ebuild:
  Fix dependencies on x264 for 0.5, it doesn't detect the latest version,
  bug #284937

  07 Sep 2009; Alexis Ballier <aballier@gentoo.org>
  ffmpeg-0.5_p19787.ebuild, ffmpeg-9999-r1.ebuild:
  disable tests without USE=encode, they fail if it is not enabled

  07 Sep 2009; Alexis Ballier <aballier@gentoo.org>
  ffmpeg-0.5_p19787.ebuild:
  drop keywords for arches that dont have opencore-amr keyworded

*ffmpeg-0.5_p19787 (06 Sep 2009)

  06 Sep 2009; Alexis Ballier <aballier@gentoo.org>
  +ffmpeg-0.5_p19787.ebuild:
  Add today's ffmpeg svn snapshot.

  06 Sep 2009; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999-r1.ebuild:
  Use ffmpeg.org svn repo and add PV conditionals so that we can make
  snapshots by simply copying -9999

  06 Sep 2009; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999-r1.ebuild:
  Correctly detect cpu by upstream checks when march=native is used, bug
  #273421
