@@ -1,6 +1,10 @@
 # ChangeLog for media-video/ffmpeg
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.318 2009/09/28 22:49:59 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.319 2009/09/28 22:51:26 aballier Exp $
+
+  28 Sep 2009; Alexis Ballier <aballier@gentoo.org>
+  -ffmpeg-0.5_p19787.ebuild:
+  remove old
 
   28 Sep 2009; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999-r1.ebuild,
   metadata.xml:
